# esphome-config

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
boards/: README.md
boards/esp32/: esp32-wrover.yaml
boards/esp32-a1s/: esp32-a1s-es8388.yaml
boards/esp32-audio-kit/: esp32-audio-kit.yaml
boards/esp32c3-supermini/: esp32c3-supermini.yaml
boards/esp32c3-zero/: esp32c3-zero.yaml
boards/esp32s3-devkit/: README.md  base.yaml  n16r8.yaml  n8r2.yaml
boards/esp32s3-zero/: esp32s3-zero.yaml
boards/tywe3s/: tywe3s.yaml
devices/: README.md
