[project]
name = "esphome-config"
version = "0"
description = "ESPHome configuration packages and devices."
readme = "README.md"
authors = [
  {name = "James Myatt", email = "james@jamesmyatt.co.uk"},
]
requires-python = ">=3.13"
dependencies = [
    "esphome~=2026.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
